moved the force-wrap mixin to a more general location to prevent long links from breaking out of their containers

--- a/sass/partials/design/_branch.scss
+++ b/sass/partials/design/_branch.scss
@@ -185,9 +185,6 @@ article div.content-group {
       margin-bottom: 1em;
       position: relative;
       @extend .branch-boxes-shadowed;
-        p {
-          @include force-wrap;
-        }
         .ask-a-librarian-widget {
           iframe {
             width: 100%;
