--- a/sass/partials/global/_type.scss
+++ b/sass/partials/global/_type.scss
@@ -82,6 +82,8 @@ a {
   &:active, &.active {
 
   }
+// Forces long links to wrap themselves so they don't run off the page
+  @include force-wrap;
 }
 
 
